--- a/public/index.html
+++ b/public/index.html
@@ -1,10 +1,19 @@
 <!doctype html>
 <html>
   <head>
+    <meta name="viewport" content="width=device-width">
     <meta charset="utf-8">
     <title>Krøkkete.com</title>
+    <style>
+      html, body, main { height: 100%; margin: 0; padding: 0; }
+      body { font-family: -apple-system,BlinkMacSystemFont,Segoe UI,Roboto,Oxygen,Ubuntu,Cantarell,Fira Sans,Droid Sans,Helvetica Neue,sans-serif; }
+      main { display: flex; align-items: center; }
+      h1 { text-align: center; flex: 1; }
+    </style>
   </head>
   <body>
-    <h1>Uff. Dette var krøkkete.</h1>
+    <main>
+      <h1>Uff. Dette var krøkkete.</h1>
+    </main>
   </body>
 </html>
